# nothingtoseehere

./: CHANGELOG.md  DEPLOYMENT.md  README.md  RESEARCH.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
examples/: mouse_demo.py  wikipedia_demo.py
nothingtoseehere/: README.md  __init__.py  neuromotor_input.py  test_standalone.py
tests/: test_neuromotor.py  test_nothingtoseehere.py
