[project]
name = "nothingtoseehere"
version = "0.1"
description = "A python package that is certainly only for human mouse movement and keyboard input."
readme = "README.md"
requires-python = ">=3.10"
authors = [{name = "Super44"}]
license = "Apache-2.0"
classifiers = []
dependencies = [
    "numpy>=1.24.0",
    "scipy>=1.10.0",
    "pyautogui>=0.9.54",
]

[project.optional-dependencies]
browser = [
    "nodriver>=0.38",
]

[dependency-groups]
dev = [
    "pytest"
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"


[project.urls]
Homepage = "https://github.com/Super-44/nothingtoseehere"
Changelog = "https://github.com/Super-44/nothingtoseehere/releases"
Issues = "https://github.com/Super-44/nothingtoseehere/issues"
CI = "https://github.com/Super-44/nothingtoseehere/actions"

